Add social link to studioproject
